--- a/Selenide/src/main/resources/config.properties
+++ b/Selenide/src/main/resources/config.properties
@@ -14,5 +14,6 @@ user.db=@userDb@
 #Geckodriver version: 17/64
 #ffdriver.path=src/main/resources/geckodriver.exe
 ffdriver.path=src/main/resources/geckodriver_21
-chromedriver.path=src/main/resources/chromedriver
+chrome.driver.path=src/main/resources/chromedriver
 grid.enabled=${grid.enabled}
+browser.type = @browser.type@
