--- a/Selenium/src/main/resources/config.properties
+++ b/Selenium/src/main/resources/config.properties
@@ -11,4 +11,6 @@ app.url=@url@
 app.timeout=@timeout@
 user.db=@userDb@
 ffdriver.path=src/main/resources/geckodriver_21
-# ffdriver.path=src/main/resources/geckodriver.exe
+chrome.driver.path=src/main/resources/chromedriver
+grid.enabled=${grid.enabled}
+browser.type = @browser.type@
