--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -109,5 +109,13 @@
                 </filters>
             </build>
         </profile>
+        <profile>
+            <id>firefox</id>
+            <build>
+                <filters>
+                    <filter>src/test/profiles/firefox.profile</filter>
+                </filters>
+            </build>
+        </profile>
     </profiles>
 </project>
