--- a/Selenide/pom.xml
+++ b/Selenide/pom.xml
@@ -15,6 +15,9 @@
         <log4j.version>1.2.17</log4j.version>
         <ojdbc6.version>11.2.0.3</ojdbc6.version>
         <mavensurefireplugin>2.19.1</mavensurefireplugin>
+        <aspectjweaver.version>1.8.10</aspectjweaver.version>
+        <aspectj.version>1.7.4</aspectj.version>
+
     </properties>
 
     <dependencies>
@@ -43,6 +46,16 @@
             <artifactId>ojdbc6</artifactId>
             <version>${ojdbc6.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -59,17 +72,30 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${mavensurefireplugin}</version>
+                <version>2.21.0</version>
                 <configuration>
-                    <skipTests>false</skipTests>
-                    <!--<threadCountSuites>2</threadCountSuites>-->
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                    </systemPropertyVariables>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+                    </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>${basedir}/src/main/resources/full_suite.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <includes>
-                        <include>**/*.java</include>
-                    </includes>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.8</version>
             </plugin>
         </plugins>
     </build>
