--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>allure-testng</artifactId>
             <version>${allure-testng}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
