--- a/Selenide/src/main/resources/config.properties
+++ b/Selenide/src/main/resources/config.properties
@@ -12,8 +12,8 @@ app.url=@url@
 app.timeout=@timeout@
 user.db=@userDb@
 #Geckodriver version: 17/64
-#ffdriver.path=src/main/resources/geckodriver.exe
-ffdriver.path=src/main/resources/geckodriver_21
-chrome.driver.path=src/main/resources/chromedriver
+ffdriver.path=src/main/resources/geckodriver.exe
+#ffdriver.path=src/main/resources/geckodriver_21
+chrome.driver.path=src/main/resources/chromedriver.exe
 grid.enabled=${grid.enabled}
 browser.type = @browser.type@
